updated crash course exercises

--- a/02_Python_Crash_Course_Exercises.ipynb
+++ b/02_Python_Crash_Course_Exercises.ipynb
@@ -78,7 +78,7 @@
       "source": [
         "7**4"
       ],
-      "execution_count": 69,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -124,7 +124,7 @@
         "words = s.split(\" \")\n",
         "print(words)"
       ],
-      "execution_count": 70,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,7 +181,7 @@
         "sentence = \"The diameter of {} is {} kilometers.\".format(planet, diameter)\n",
         "print(sentence)"
       ],
-      "execution_count": 72,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -229,7 +229,7 @@
       "source": [
         "lst[3][1][2][0]"
       ],
-      "execution_count": 74,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -282,7 +282,7 @@
       "source": [
         "d.get('k1')[3].get('tricky')[3].get('target')[3]"
       ],
-      "execution_count": 76,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -313,11 +313,11 @@
       "metadata": {
         "id": "gqqodvOgDcuK",
         "colab_type": "code",
+        "outputId": "5b825d55-2b05-4ac7-d46c-c5ff6a5a93a4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "5b825d55-2b05-4ac7-d46c-c5ff6a5a93a4"
+        }
       },
       "source": [
         "# Tuple is immutable\n",
@@ -326,7 +326,7 @@
         "print(tupleSample)\n",
         "print(listSample)"
       ],
-      "execution_count": 89,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -343,18 +343,18 @@
       "metadata": {
         "id": "u45OhibjdB5m",
         "colab_type": "code",
+        "outputId": "a021094a-61fc-4edc-815c-0ac97b7b31d7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "a021094a-61fc-4edc-815c-0ac97b7b31d7"
+        }
       },
       "source": [
         "# change list\n",
         "listSample[0] = \"d\"\n",
         "print(listSample)"
       ],
-      "execution_count": 90,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -370,18 +370,18 @@
       "metadata": {
         "id": "-XlbsNqtdLaE",
         "colab_type": "code",
+        "outputId": "a64f4248-adbd-43f6-ecd6-82c8405312ed",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 163
-        },
-        "outputId": "a64f4248-adbd-43f6-ecd6-82c8405312ed"
+        }
       },
       "source": [
         "# change tuple (error)\n",
         "# tuple is immutable and state cannot be changed\n",
         "tupleSample[0] = \"d\""
       ],
-      "execution_count": 93,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
@@ -439,7 +439,7 @@
       "source": [
         "domainGet('user@domain.com')"
       ],
-      "execution_count": 79,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -488,7 +488,7 @@
       "source": [
         "findDog('Is there a dog here?')"
       ],
-      "execution_count": 81,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -537,7 +537,7 @@
       "source": [
         "countDog('This dog runs faster than the other dog dude!')"
       ],
-      "execution_count": 83,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -582,29 +582,28 @@
       "metadata": {
         "id": "GHZrICEXDcun",
         "colab_type": "code",
-        "outputId": "38d2cdbd-4642-4b3d-98e9-900da4a7cb23",
+        "outputId": "bae230fd-f765-4f95-e8f7-fb9490042e6d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         }
       },
       "source": [
-        "startsWithS = lambda word: word.startswith('s')\n",
-        "\n",
-        "for word in seq:\n",
-        "  if not startsWithS(word):\n",
-        "    seq.remove(word)\n",
-        "\n",
-        "print(seq)"
+        "list(filter(lambda word: word.startswith('s'),seq))"
       ],
-      "execution_count": 85,
+      "execution_count": 101,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "['soup', 'salad', 'great']\n"
-          ],
-          "name": "stdout"
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['soup', 'salad']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 101
         }
       ]
     },
@@ -658,7 +657,7 @@
       "source": [
         "caught_speeding(81,True)"
       ],
-      "execution_count": 87,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -688,7 +687,7 @@
       "source": [
         "caught_speeding(81,False)"
       ],
-      "execution_count": 88,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
